update the new  weather app change

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <div class="day">Monday</div>
                 <div class="temp">Night - 25.6&#176; C</div>
                 <div class="temp">Day - 35.6&#176; C</div>
+                <div class="temp">Day - 35.6&#176; C</div>
             </div>
         </div>
 
